# belief-credence

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  METHOD_DEPENDENCIES.md  PROMPTING_STRATEGIES.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
belief_credence/: __init__.py  ccs.py  core.py  data_split.py  datasets.py  epistemology.py  logit_gap.py  model_utils.py  output_utils.py  prompting.py  uncertainty.py  validation.py  visualization.py
examples/: batch_evaluate_and_save.py  ccs_layer_search.py  compare_methods.py  evaluate_epistemology.py  evaluate_with_datasets.py  visualize_comparisons.py
scripts/: README.md  debug_dtype.py  generate_plots.py  run_evaluation.py  test_setup.py
src/belief_credence/: __init__.py  comparison.py  core.py  hallucination_probe.py  prompting.py
tests/: test_comparison.py  test_core.py  test_epistemology.py  test_prompting.py
